k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ttrpg-3025
  namespace: 3025-ttrpg
spec:
  selector:
    app: 3025-ttrpg
  ports:
    - port: 80
      targetPort: 3000
