k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttrpg-3025
  namespace: 3025-ttrpg
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - 3025.jannisblossey.com
      secretName: ttrpg-3025-tls
  rules:
    - host: 3025.jannisblossey.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ttrpg-3025
                port:
                  number: 80
